// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/ErrorSummary/Error Defaults play-test 1`] = `
<div data-test-block="true">
  <a class="_link_1tclx_1  "
     href="#referenceId_1"
  >
    Husk å fylle ut type varer
  </a>
</div>
`;

exports[`Tester/ErrorSummary/Error WithAttributes play-test 1`] = `
<div data-test-block="true">
  <a id="htmlid"
     class="_link_1tclx_1  dummyClassname"
     lang="nb"
     data-testid="123ID"
     href="#referenceId_1"
  >
    Husk å fylle ut type varer
  </a>
</div>
`;

exports[`Tester/ErrorSummary/Error WithRef play-test 1`] = `
<div data-test-block="true">
  <a class="_link_1tclx_1  "
     href="#referenceId_1"
     id="dummyIdForwardedFromRef"
  >
    Husk å fylle ut type varer
  </a>
</div>
`;
